feat: 升级至多平台统一数据分析架构v2
此提交完成了系统从单一B站分析到多平台视频数据分析的核心升级：
1. 新增统一数据契约v2文档，适配B站、抖音、爱奇艺、优酷等多平台
2. 新增20+个数据传输DTO类，统一内容、互动、情感分析等数据模型
3. 重构前后端代码适配新的多平台架构：
   - 后端：调整Maven配置、数据源环境变量化、新增平台上下文管理、优化AI线程池
   - 前端：新增多平台筛选、统一分析页面、重构弹幕/情感图表组件、优化路由返回逻辑
4. 新增平台维表、统一内容/互动/指标快照数据库表结构
5. 修复并优化了任务跳转、数据回退、国际化等细节问题
6. 新增多平台单元测试验证新架构逻辑